# ChangeLog for kde-misc/yakuake
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.64 2013/05/20 12:47:13 ago Exp $

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.9-r2.ebuild:
  Stable for ppc, wrt bug #470492

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.9-r2.ebuild:
  Stable for x86, wrt bug #470492

  19 May 2013; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.9-r2.ebuild:
  Stable for amd64, wrt bug #470492

*yakuake-2.9.9-r2 (15 Apr 2013)

  15 Apr 2013; Michael Palimaka <kensington@gentoo.org>
  +files/yakuake-2.9.9-lastsession.patch, +yakuake-2.9.9-r2.ebuild:
  Backport patch from upstream adding an option to restore previous behaviour
  where the window remains open after the last session is closed. Fixes bug
  #465844.

  28 Jan 2013; Michael Palimaka <kensington@gentoo.org>
  -yakuake-2.9.8-r1.ebuild:
  Remove old.

  28 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.9-r1.ebuild:
  Stable for ppc, wrt bug #450678

  27 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.9-r1.ebuild:
  Stable for x86, wrt bug #450678

  27 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.9-r1.ebuild:
  Stable for amd64, wrt bug #450678

  11 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.8-r1.ebuild,
  yakuake-2.9.9-r1.ebuild:
  Drop ~ppc64

  30 Nov 2012; <ago@gentoo.org> yakuake-2.9.8-r1.ebuild:
  Stable for ppc, wrt bug #442394

  24 Nov 2012; Johannes Huber <johu@gentoo.org> -yakuake-2.9.8.ebuild:
  Remove old.

  23 Nov 2012; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.8-r1.ebuild:
  Stable for x86, wrt bug #442394

  23 Nov 2012; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.8-r1.ebuild:
  Stable for amd64, wrt bug #442394

*yakuake-2.9.9-r1 (26 Oct 2012)

  26 Oct 2012; Chris Reffett <creffett@gentoo.org> +yakuake-2.9.9-r1.ebuild,
  -yakuake-2.9.9.ebuild:
  Revision bump, forgot to check for new LINGUAS before.
