@@ -1,26 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX yakuake-2.9.9-lastsession.patch 9101 SHA256 0f9ef13b8e16ee91d498a3e26019d24b2ee47729ee67bfad1c21b234b84957a2 SHA512 9ce05960f624a0fa25c0c128da6112e482b9452bf5fc87786c36a41d8e99020dde81eab4ad9ebd32ed794a95763bf4ec28b17291c2c09e55311d6be8345412f3 WHIRLPOOL fdc5f75bb08d2619f75d0b20218fd5a78da9a971359f8f16445d70ba5c0c7a51232c861bef82a4358034dd0ef84b2f4cbca09cdaeabc15b5f1687817a2740f98
 DIST yakuake-2.9.9.tar.xz 316716 SHA256 0e0e4994c568f8091c9424e4aab35645436a9ff341c00b1cd1eab0ada0bf61ce SHA512 6dbc3f38df81598eafa86eecadb2d9e4cf32c77843434ac48fddf4ff3295babebc4c41dab300eebd4ef9b80f11a6f87c73c7e18279d02fe6e45f7caf38286b14 WHIRLPOOL feb44998c6810c06344c525465cfb965ec2b58de5382979a634d7eccd4e1f7872e45d7259da4d639327792430dc3b5ea21c79459dff7389253f7bbe5bf93816d
-EBUILD yakuake-2.9.9-r1.ebuild 752 SHA256 84c3b64f16a1b7290fd149b1a1e85a68794cb4d8f79e8269d28785b2afe96ae9 SHA512 2b962ac0887a8866869bb87dee64f2a1266956347a64494eceeab3723c301b66514331559e763df02d69d99638ffc20b2c4932aa4f8269d4d220fc645a53b8bb WHIRLPOOL eebf6e574026d0064c78cc2e43321b4cc0dcccd0f7a0aaae160e9264f45865043e02a794e8ac2d4964ff299a06a15ccb2f6e51af78b14125ea34a46da78cca16
 EBUILD yakuake-2.9.9-r2.ebuild 877 SHA256 b58d0fa80be165b31ab4daa8c31d3e41a4ab18a8ee3033db69ab6d4866254c42 SHA512 6f2156aeb12ff4638038de4fe222227223a56f1b06d5055b18c95caddfb390a7b9d6ed4fbbce89f807f33d857792600e3de118524975873fa27a1f03ee7a753e WHIRLPOOL 60b2cf0da153344c91f032346ea258b6c703aeac0d9d284f1e1647012c444e4a08d54b844ee50b683e4951ee68337deb6ba8e78c3a278c6094e597942f3b4b74
-MISC ChangeLog 8640 SHA256 cf6b90029ecf7687554b250c0712299ecf0a4241598c456e183a3d2b49b14250 SHA512 72600be23aaa6b6c15925512d03ca31e7ddf66e8fbeb0255e5af4003aa7e911de549ee09a6d7e052c12a6c5ce300084c52c15b31a8167ca6bae37a76884870f4 WHIRLPOOL 934f6a61732e9f3c5b40c08ebccbcd9cbb3a1b28f50b2a961a389317b20dd759bac7be93f50554eaa106cfbe4ce1da52caea19f0f63efbf1d109fb936d004175
+MISC ChangeLog 8730 SHA256 543a97964e3bb2ef63e6d486ab380188ca1c7674dadcdb05c819b2050afc4173 SHA512 5edd13fca4479b5a1542a4554a65293894d8d465dcbdd6e79f4f065118965c75eeff26c3eb6a1c8a756a07db0698c3318d2a7dd5c51c1cb1e5ff75b242d22940 WHIRLPOOL cc53bb4d82bf260d45989de2d04e1a6563b779fdb610d5a6560569ea706efc5a4736c28285e9cf0579fa25144ce098e2140e34081e738eeec4935eb9b7939b85
 MISC metadata.xml 437 SHA256 3900e418ba01992f04ac0494d13cd1e4176cf8d21b431500fb9ca5a02ea87f97 SHA512 82f957dca6b09ebd4b7db1d9abe5eb3537c6564c08377aced8a4cee4b1352a705279439c7148eedf944e580e5c3c294c310ba107bc59d01ed1173ec19b98337a WHIRLPOOL b894f86a0c72080d4d704dbe5170f9b3f953e37cadf5c019b7b3f2a2529485ad88c9e265c9044f19c6348b1d5e87a5d005351acefbe760db0a1f28e481f13668
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRmhqrAAoJELp701BxlEWf3rkP/28jlmiAQG4nH/CSJ/E5CgLE
-UuZb57nuch7f7EW0bxLBUPiaoiwUbRllyhoGNLlmTUnZjLnvheHsI0c6yKqf7wph
-ZUhZ0ES6j8ToFKcnXM7xN4CprcTuSMbJp2UapXUg5ENITk0HVDQWfqwSqfJjCoRY
-PmF3HlonXbOZibHD+3rZj9cqPfa4MPz3bRYhQONXQBvS1Zv895Uhqc1Z9btXkI0w
-xscICyA1k9ULs6jND+6fv0bjCLQDJCjevTIzkPYvvO9skakc15Fioo15EFkSLviO
-1Znbz5LdNiT+9LQGZokBCYZq7cXgSXktMEchnoQU9RaeGhpZSxn/PLlBAOQ1MTjh
-k8qdU3Vd29YftgW4tre8X7MZi5shAkWVZcbLoJRk7zIBpm4kkpmisvFRB8qxUPX5
-/gmHUsH9hEwS9C38htlukQErsFUu5q9Pxf+ImG59YlEoTJRRlzud+J0CxtqPw6nq
-/Xzs6v9HFTt3EFHNC0y/tCWis2GtZFqXeMAysjuXL8gEDSw0QWe/ugku704Yo5V8
-iNFk4qaHTx0VyNiyD9XQ7W4/fL+j6GxWMHBwYptPCr6OEPpK9at0MtTWWg2SJ8pY
-zKtHDmeRhToOuOVsL5Dd7RdNAZLIg6WQe+HVq7ZFz2BpzNHBKcUKgCnFksx04Ig5
-2Eq3/Ficre0U2IyXnj5J
-=3mzX
+iQEcBAEBCAAGBQJRm7atAAoJEO+t9ga+3I3a+N8H/RXuJkziyBycKuCnDjnDHSr/
+Y85f+aCvwxJDv/mZOK9rg3bpxlX2B2YzSP0CBuzu7UMQS2yYe8YYHQL8efyFItrl
+Z3YaXijQykX6FgMaxOAKSwvhw0jgJ2rHmxXVm8q0NGguzrjzNloYElf7QtNecCRF
+lX5y2hfDiWJedejvyl33HUNaDbdOCgpTfBo0zIIQW5FK6FqNYx1QwZhXOk+JEX2S
+uJ162HI8zKhb4y5GFsWw7vFDRypDQ3QKhn5wi8uTrXafBhcCJo98o1/KWcDOBE51
+5k+5MDn/lBFC4fG2rEDHXTkNAMbXtdrDa85zVru4UFEB4c39M9Esn3yXJmLzLsg=
+=QHDd
 -----END PGP SIGNATURE-----
