@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/yakuake
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.64 2013/05/20 12:47:13 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.65 2013/05/21 18:02:11 johu Exp $
+
+  21 May 2013; Johannes Huber <johu@gentoo.org> -yakuake-2.9.9-r1.ebuild:
+  Remove old.
 
   20 May 2013; Agostino Sarubbo <ago@gentoo.org> yakuake-2.9.9-r2.ebuild:
   Stable for ppc, wrt bug #470492
